objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Match_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Date__c</fullName>
        <label>My Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Employee__c</fullName>
        <label>Number of Employee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Value__c</fullName>
        <label>Potential Value</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salary_Maximum__c</fullName>
        <label>Salary Maximum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salary_Minimum__c</fullName>
        <label>Salary Minimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_Opportunities__c</fullName>
        <label>Sum of Opportunities</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Support_Tier__c</fullName>
        <defaultValue>$CustomMetadata.Support_Tier__mdt.Bronze.MasterLabel</defaultValue>
        <label>Support Tier</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Spending__c</fullName>
        <label>Total Spending</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>website__c</fullName>
        <label>website</label>
        <type>Url</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Number_8_Characters</fullName>
        <active>false</active>
        <errorConditionFormula>LEN(AccountNumber ) != 8</errorConditionFormula>
        <errorMessage>Account number must be 8 characters long</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Number_is_Numeric</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(AccountNumber)),
NOT(ISNUMBER(AccountNumber))
				)</errorConditionFormula>
        <errorMessage>Account Number should be Numeric</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_country_code</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
LEN (BillingCountry) = 1,

NOT(
 CONTAINS(
					
					&quot;IN&quot; &amp;
					&quot;IT&quot;,
					 BillingCountry )))</errorConditionFormula>
        <errorMessage>A valid two-letter country code is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_must_be_in_current_year_date</fullName>
        <active>false</active>
        <errorConditionFormula>YEAR(My_Date__c ) &lt;&gt; YEAR (TODAY())</errorConditionFormula>
        <errorMessage>DATE SHOULD BE IN A CURRENT YEAR</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Minimum_Spending_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>IF( 
 (ISPICKVAL( Support_Tier__c , &quot;Silver&quot;) 
      &amp;&amp; 
   ( Total_Spending__c &lt;  
   $CustomMetadata.Support_Tier__mdt.Silver.Minimum_Spending__c 
   )
 ) 
      || 
 (ISPICKVAL( Support_Tier__c , &quot;Gold&quot;) 
      &amp;&amp; 
   ( Total_Spending__c &lt;  
   $CustomMetadata.Support_Tier__mdt.Gold.Minimum_Spending__c 
   )
 ), TRUE, FALSE
)</errorConditionFormula>
        <errorMessage>Dollar value too low for this support tie</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Revenue_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>IF(
(ISPICKVAL( Support_Tier__c , &quot;Gold&quot;)
&amp;&amp;
( AnnualRevenue &gt;=
20*$CustomMetadata.Support_Tier__mdt.Gold.Minimum_Spending__c
)
), TRUE, FALSE
)</errorConditionFormula>
        <errorMessage>ERROR</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>website</fullName>
        <active>false</active>
        <errorConditionFormula>AND(

RIGHT(website__c,4) &lt;&gt; &quot;.COM&quot;,
RIGHT(website__c,4) &lt;&gt; &quot;.org&quot;				


)</errorConditionFormula>
        <errorMessage>website error</errorMessage>
    </validationRules>
</CustomObject>